fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+
 html {
   font-family: "Asap Condensed", sans-serif;
 }
@@ -8,12 +9,12 @@ html {
 
 .hover-box-caption {
   bottom: -4em;
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 5));
+  background-image: linear-gradient(to bottom,rgba(0, 0, 0, 0), rgba(0, 0, 0, .5));
   text-shadow: 1px 1px 5px rgba(0, 0, 0, .9);
   transition: all .2s linear;
 }
 
-
+.hover-box:hover .hover-box-caption,
 .hover-box:focus .hover-box-caption {
   bottom: 0;
 }
@@ -23,7 +24,7 @@ html {
   transition: all .2s linear;
 }
 
-
+.hover-box:hover .hover-box-img,
 .hover-box:focus .hover-box-img {
   filter: grayscale(0);
   transform: scale(1.1);
